Added section per page audit requirements

--- a/index.html
+++ b/index.html
@@ -46,12 +46,18 @@
     <section class="profile">
       <h2>About Me</h2>
 
+      <div class="profile-text">
+        <p>Hello, World! My name is Robbie Yamashita. I'm currently a Software Engineering student, passionate about computers, software and cyber security!</p>
+        <p>I'm currently taking a web development class, on track and working towards my first certificate. This will serve as my portfolio, showcasing my journey to the Web and Computer Programming certificate.</p>
+      </div>
+
+    </section>
+
+    <section>
+      <h2>Student Photo</h2>
+
       <div class="profile-content">
         <img src="images/profile.jpg" alt="Picture of Robbie Yamashita, the author of this site" class="profile-img">
-        <div class="profile-text">
-          <p>Hello, World! My name is Robbie Yamashita. I'm currently a Software Engineering student, passionate about computers, software and cyber security!</p>
-          <p>I'm currently taking a web development class, on track and working towards my first certificate. This will serve as my portfolio, showcasing my journey to the Web and Computer Programming certificate.</p>
-        </div>
       </div>
     </section>
 
