Added labels to buttons per lighthouse report

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <span class="site-name">Robbie Yamashita</span>
       </div>
 
-      <button class="hamburger"></button>
+      <button class="hamburger" aria-label="Mobile navigation menu button"></button>
     </div>
 
     <nav class="navigation">
