fixed audit requirements

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -15,6 +15,10 @@
   <title>Business Directory | Toronto Chamber of Commerce</title>
   <link rel="icon" href="favicon.ico">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,1&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/small.css">
   <link rel="stylesheet" href="styles/larger.css">
@@ -62,7 +66,7 @@
   <footer>
     <div class="footer-content">
       <div class="contact-info">
-        <h3>Toronto Chamber of Commerce</h3>
+        <h2>Toronto Chamber of Commerce</h2>
         <p>55 University Ave</p>
         <p>Toronto, ON M5J 2H7</p>
         <p>Phone: (416) 868-6415</p>
