fixed Open Graph facebook tags,  google api fonts

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -9,6 +9,8 @@
   <meta property="og:title" content="Toronto Chamber of Commerce | Business Directory">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://rpathway.github.io/wdd231/chamber/images/chamber-logo.jpg">
+  <meta property="og:image:width" content="320">
+  <meta property="og:image:height" content="320">
   <meta property="og:url" content="https://rpathway.github.io/wdd231/chamber/directory.html">
   <meta property="og:description" content="Discover Toronto Chamber of Commerce member businesses. Browse the directory of local companies and organizations.">
 
@@ -17,7 +19,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,1&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:opsz@14..32&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/small.css">
