Added lazy loading, higher res image for og meta tags per Meta's warnings.

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -8,9 +8,9 @@
 
   <meta property="og:title" content="Toronto Chamber of Commerce | Business Directory">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="https://rpathway.github.io/wdd231/chamber/images/chamber-logo.jpg">
-  <meta property="og:image:width" content="320">
-  <meta property="og:image:height" content="320">
+  <meta property="og:image" content="https://rpathway.github.io/wdd231/chamber/images/chamber-logo-large.svg">
+  <meta property="og:image:width" content="200">
+  <meta property="og:image:height" content="200">
   <meta property="og:url" content="https://rpathway.github.io/wdd231/chamber/directory.html">
   <meta property="og:description" content="Discover Toronto Chamber of Commerce member businesses. Browse the directory of local companies and organizations.">
 
@@ -30,7 +30,7 @@
   <header>
 
     <div class="logo">
-      <img src="images/chamber-logo.jpg" alt="Toronto Chamber of Commerce Logo">
+      <img src="images/chamber-logo.jpg" alt="Toronto Chamber of Commerce Logo" loading="lazy">
       <span>Toronto Chamber of Commerce</span>
     </div>
 
