--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -9,6 +9,7 @@
   <meta property="og:title" content="Toronto Chamber of Commerce | Business Directory">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://rpathway.github.io/wdd231/chamber/images/chamber-logo-large.svg">
+  <meta property="og:image:alt" content="Toronto Chamber of Commerce site logo">
   <meta property="og:image:width" content="200">
   <meta property="og:image:height" content="200">
   <meta property="og:url" content="https://rpathway.github.io/wdd231/chamber/directory.html">
