Added Join page, updated scripts as modules for shared functions and condensed style sheet

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -15,7 +15,7 @@
   <meta property="og:url" content="https://rpathway.github.io/wdd231/chamber/index.html">
   <meta property="og:description" content="Supporting business growth and economic development in Toronto. Connect with local businesses and join our chamber community.">
 
-  <title>Toronto Chamber of Commerce | Home</title>
+  <title>Home | Toronto Chamber of Commerce </title>
   <link rel="icon" href="favicon.ico">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +25,8 @@
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/small.css">
   <link rel="stylesheet" href="styles/larger.css">
-  <script src="scripts/index.js" defer></script>
+
+  <script type="module" src="scripts/index.mjs"></script>
 </head>
 <body>
   <header>
