--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -25,7 +25,8 @@
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/small.css">
   <link rel="stylesheet" href="styles/larger.css">
-  <script src="scripts/directory.js" defer></script>
+
+  <script type="module" src="scripts/directory.mjs"></script>
 </head>
 <body>
   <header>
