Updated nav links

--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Robbie Yamashita">
   <meta name="description" content="WDD 231 | Web Frontend Development. Robbie Yamashita's course homepage featuring a portfolio of projects and assignments.">
-  <title>WDD 231 | Web Frontend Development | Robbie Yamashita</title>
 
-  <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/small.css">
-  <link rel="stylesheet" href="styles/larger.css">
+  <title>WDD 231 | Web Frontend Development | Robbie Yamashita</title>
+  <link rel="icon" href="favicon.ico">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital@0;1&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/small.css">
+  <link rel="stylesheet" href="styles/larger.css">
 
   <script src="scripts/navigation.js" defer></script>
   <script src="scripts/date.js" defer></script>
@@ -34,8 +36,8 @@
     <nav class="navigation">
       <ul>
         <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="#">Chamber</a></li>
-        <li><a href="#">Final</a></li>
+        <li><a href="chamber/index.html">Chamber</a></li>
+        <li><a href="final/index.html">Final</a></li>
       </ul>
     </nav>
   </header>
