Modified pages per audit and lighthouse suggestions

--- a/final/index.html
+++ b/final/index.html
@@ -9,10 +9,15 @@
   <meta property="og:title" content="Kanto Collector | Daily Pokemon Encounters">
   <meta property="og:description" content="Catch and collect the original 151 Pokémon through daily encounters.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="images/og-image.svg">
+  <meta property="og:url" content="https://rpathway.github.io/wdd231/final/index.html">
+  <meta property="og:image" content="https://github.com/rpathway/wdd231/blob/master/final/images/og-image.svg">
 
   <title>Kanto Collector | Home</title>
   <link rel="icon" href="favicon.ico">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:opsz@14..32&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="styles/kanto-collector.css">
   <link rel="stylesheet" href="styles/kanto-collector-large.css">
@@ -47,7 +52,7 @@
     <section class="daily-encounter">
       <div class="encounter-container">
         <div class="encounter-header">
-          <h3>Today's Discovery</h3>
+          <h2>Today's Discovery</h2>
           <p class="encounter-date" id="encounterDate"></p>
           <p class="encounter-conditions" id="encounterConditions">Getting local weather conditions...</p>
         </div>
@@ -77,22 +82,22 @@
       <div class="features-grid">
         <div class="feature-card">
           <div class="feature-icon">🌍</div>
-          <h4>Location-Based</h4>
+          <h3>Location-Based</h3>
           <p>Encounters vary based on your location and local weather patterns</p>
         </div>
         <div class="feature-card">
           <div class="feature-icon">⏰</div>
-          <h4>Daily Discovery</h4>
+          <h3>Daily Discovery</h3>
           <p>Return each day for a new chance to encounter Pokemon</p>
         </div>
         <div class="feature-card">
           <div class="feature-icon">✨</div>
-          <h4>Shiny Variants</h4>
+          <h3>Shiny Variants</h3>
           <p>Rare shiny forms can appear with special odds</p>
         </div>
         <div class="feature-card">
           <div class="feature-icon">📚</div>
-          <h4>Complete Collection</h4>
+          <h3>Complete Collection</h3>
           <p>Track all 151 original Pokemon in your Pokédex</p>
         </div>
       </div>
@@ -116,7 +121,7 @@
  
   <footer>
     <div class="footer-container">
-      <p>©️ 2025 Kanto Collector. Educational project using <a href="https://pokeapi.co" target="_blank" rel="noopener">PokéAPI</a>.</p>
+      <p>©️ 2025 Kanto Collector. Educational project using <u><a href="https://pokeapi.co" target="_blank" rel="noopener">PokéAPI</a></u>.</p>
       <p><a href="https://byupathwayworldwideprod-my.sharepoint.com/:v:/g/personal/ryamashita1_byupathway_edu/IQAJZtWdu1rTSru9M7oVZXXeAcZdLlSvEl3VTaDZhaiHSj4?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=wbW6gA" target="_blank">Video</a></p>
       <hr>
       <div class="footer-nav">
