--- a/final/attributions.html
+++ b/final/attributions.html
@@ -3,16 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Kanto Collector | Attributions and credits for Kanto Collector">
+  <meta name="description" content="Kanto Collector | Attributions and credits for Kanto Collector, Catch and collect the original 151 Pokémon through daily encounters.">
   <meta name="author" content="Robbie Yamashita">
 
   <meta property="og:title" content="Kanto Collector | Attributions">
-  <meta property="og:description" content="Attributions and credits for Kanto Collector">
+  <meta property="og:description" content="Attributions and credits for Kanto Collector, Catch and collect the original 151 Pokémon through daily encounters.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="images/og-image.svg">
+  <meta property="og:url" content="https://rpathway.github.io/wdd231/final/index.html">
+  <meta property="og:image" content="https://github.com/rpathway/wdd231/blob/master/final/images/og-image.svg">
 
   <title>Kanto Collector | Attributions</title>
   <link rel="icon" href="favicon.ico">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:opsz@14..32&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="styles/kanto-collector.css">
   <link rel="stylesheet" href="styles/kanto-collector-large.css">
@@ -44,7 +49,7 @@
       </div>
 
       <div class="benefits-section">
-        <h3>Pokemon Data</h3>
+        <h2>Pokemon Data</h2>
         <ul>
           <li>All Pokemon data and sprites provided by <a href="https://pokeapi.co" target="_blank" rel="noopener">PokéAPI</a></li>
           <li>Pokemon and Pokemon character names are trademarks of Nintendo, Game Freak, and The Pokemon Company</li>
@@ -52,7 +57,7 @@
       </div>
 
       <div class="benefits-section">
-        <h3>Other Technologies Used</h3>
+        <h2>Other Technologies Used</h2>
         <ul>
           <li>Geolocation API for location-based encounters</li>
           <li>LocalStorage API for data persistence</li>
@@ -61,7 +66,7 @@
       </div>
 
       <div class="benefits-section">
-        <h3>Project Info</h3>
+        <h2>Project Info</h2>
         <ul>
           <li>Created by Robbie Yamashita</li>
           <li>Educational project for WDD 231</li>
@@ -74,7 +79,7 @@
 
   <footer>
     <div class="footer-container">
-      <p>©️ 2025 Kanto Collector. Educational project using <a href="https://pokeapi.co" target="_blank" rel="noopener">PokéAPI</a>.</p>
+      <p>©️ 2025 Kanto Collector. Educational project using <u><a href="https://pokeapi.co" target="_blank" rel="noopener">PokéAPI</a></u>.</p>
       <p>Pokemon and Pokemon character names are trademarks of Nintendo.</p>
       <p><a href="https://byupathwayworldwideprod-my.sharepoint.com/:v:/g/personal/ryamashita1_byupathway_edu/IQAJZtWdu1rTSru9M7oVZXXeAcZdLlSvEl3VTaDZhaiHSj4?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=wbW6gA" target="_blank">Video</a></p>
       <hr>
