--- a/final/join.html
+++ b/final/join.html
@@ -9,10 +9,15 @@
   <meta property="og:title" content="Kanto Collector | Join">
   <meta property="og:description" content="Join Kanto Collector and start your Pokemon journey.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="images/og-image.svg">
+  <meta property="og:url" content="https://rpathway.github.io/wdd231/final/index.html">
+  <meta property="og:image" content="https://github.com/rpathway/wdd231/blob/master/final/images/og-image.svg">
 
   <title>Kanto Collector | Join</title>
   <link rel="icon" href="favicon.ico">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:opsz@14..32&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="styles/kanto-collector.css">
   <link rel="stylesheet" href="styles/kanto-collector-large.css">
@@ -68,12 +73,12 @@
             <label for="terms">I agree to the terms and conditions</label>
           </div>
 
-          <input type="submit" class="btn-submit" value="Register Now"></input>
+          <input type="submit" class="btn-submit" value="Register Now">
         </form>
       </div>
 
       <div class="benefits-section">
-        <h3>Why Register?</h3>
+        <h2>Why Register?</h2>
         <ul>
           <li>Save your Pokemon collection permanently</li>
           <li>Track your progress across all 151 Pokemon</li>
@@ -87,7 +92,7 @@
 
   <footer>
     <div class="footer-container">
-      <p>©️ 2025 Kanto Collector. Educational project using <a href="https://pokeapi.co" target="_blank" rel="noopener">PokéAPI</a>.</p>
+      <p>©️ 2025 Kanto Collector. Educational project using <u><a href="https://pokeapi.co" target="_blank" rel="noopener">PokéAPI</a></u>.</p>
       <p><a href="https://byupathwayworldwideprod-my.sharepoint.com/:v:/g/personal/ryamashita1_byupathway_edu/IQAJZtWdu1rTSru9M7oVZXXeAcZdLlSvEl3VTaDZhaiHSj4?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=wbW6gA" target="_blank">Video</a></p>
       <hr>
       <div class="footer-nav">
