--- a/final/thankyou.html
+++ b/final/thankyou.html
@@ -9,10 +9,15 @@
   <meta property="og:title" content="Kanto Collector | Welcome New Trainer">
   <meta property="og:description" content="Successfully registered as a Pokemon trainer!">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="images/og-image.svg">
+  <meta property="og:url" content="https://rpathway.github.io/wdd231/final/index.html">
+  <meta property="og:image" content="https://github.com/rpathway/wdd231/blob/master/final/images/og-image.svg">
 
   <title>Kanto Collector | Welcome</title>
   <link rel="icon" href="favicon.ico">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:opsz@14..32&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="styles/kanto-collector.css">
   <link rel="stylesheet" href="styles/kanto-collector-large.css">
@@ -59,7 +64,7 @@
       </div>
 
       <div class="benefits-section">
-        <h3>What's Next?</h3>
+        <h4>What's Next?</h4>
         <ul>
           <li>Start catching Pokemon on the home page</li>
           <li>Build your personal Pokédex collection</li>
@@ -75,7 +80,7 @@
 
   <footer>
     <div class="footer-container">
-      <p>©️ 2025 Kanto Collector. Educational project using <a href="https://pokeapi.co" target="_blank" rel="noopener">PokéAPI</a>.</p>
+      <p>©️ 2025 Kanto Collector. Educational project using <u><a href="https://pokeapi.co" target="_blank" rel="noopener">PokéAPI</a></u>.</p>
       <p><a href="https://byupathwayworldwideprod-my.sharepoint.com/:v:/g/personal/ryamashita1_byupathway_edu/IQAJZtWdu1rTSru9M7oVZXXeAcZdLlSvEl3VTaDZhaiHSj4?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=wbW6gA" target="_blank">Video</a></p>
       <hr>
       <div class="footer-nav">
