--- a/final/index.html
+++ b/final/index.html
@@ -10,7 +10,7 @@
   <meta property="og:description" content="Catch and collect the original 151 Pokémon through daily encounters.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://rpathway.github.io/wdd231/final/index.html">
-  <meta property="og:image" content="https://github.com/rpathway/wdd231/blob/master/final/images/og-image.svg">
+  <meta property="og:image" content="https://rpathway.github.io/wdd231/final/images/og-image.svg">
 
   <title>Kanto Collector | Home</title>
   <link rel="icon" href="favicon.ico">
@@ -121,7 +121,7 @@
  
   <footer>
     <div class="footer-container">
-      <p>©️ 2025 Kanto Collector. Educational project using <u><a href="https://pokeapi.co" target="_blank" rel="noopener">PokéAPI</a></u>.</p>
+      <p>©️ 2025 Kanto Collector. Educational project using <a href="https://pokeapi.co" target="_blank" rel="noopener"><u>PokéAPI</u></a>.</p>
       <p><a href="https://byupathwayworldwideprod-my.sharepoint.com/:v:/g/personal/ryamashita1_byupathway_edu/IQAJZtWdu1rTSru9M7oVZXXeAcZdLlSvEl3VTaDZhaiHSj4?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=wbW6gA" target="_blank">Video</a></p>
       <hr>
       <div class="footer-nav">
